--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 }
 
 .square {
-    height: 60px;
-    width: 60px;
+    height: 50px;
+    width: 10%;
     display: inline-block;
-    border: 2px solid #000;
-    background-color: #fff;
+    border: 2px solid #fff;
+    background-color: #000;
 }
 
 .clicked-active {
